--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   intl:
   image_picker:
   transparent_image:
+  permission_handler:
 dev_dependencies:
   flutter_test:
     sdk: flutter
